--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -30,7 +30,7 @@ id="todo"
           <input type="text" ng-model="items[1]['Question__c']" name="Q2" ng-required="true"></input>
           <input type="number" ng-model="items[1]['Order__c']" name="O2" ng-required="true"></input>
           {{items[1]['Question__c']}}
-          <input type="submit" value="Submit " ng-click="submitChecklist()"> </input>
+          <input type="submit" value="Submit " ng-click="addQuestion()"> </input>
       </form>
   </div>
   <div ng-model="Questions">
@@ -76,7 +76,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
                 console.log('invalid');
             }
         };
-        $scope.addQUestion = function() {
+        $scope.addQuestion = function() {
             Visualforce.remoting.Manager.invokeAction(
                 '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
                 $scope.checklist.name,
