--- a/Checklist.html
+++ b/Checklist.html
@@ -230,9 +230,34 @@ myApp.controller("ChecklistCtrl", function ($scope, userService) {
 var controllers = {};
 
 controllers.PagesController = function ($scope, userService) {
-    $scope.listPageActive = true;
-    $scope.detailPageActive = false;
-    $scope.checklist_id = null;
+
+    // Get Url Parameters
+    function getUrlVars() {
+        var vars = [], hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = hash[1];
+        }
+        return vars;
+    }
+
+    var checklist = getUrlVars()['checklist_id']; 
+    var response = getUrlVars()['id']; 
+
+    if (checklist != null ) {
+        $scope.listPageActive = false;
+        $scope.detailPageActive = true;
+        $scope.checklist_id = checklist;
+        userService.get_checklist_items(checklist);
+    }
+
+    if (checklist == undefined && response == undefined) {
+        $scope.listPageActive = true;
+        $scope.detailPageActive = false;
+        $scope.checklist_id = null;
+    }
 
     $scope.goToDetailPage = function(checklist_id) {
         $scope.checklist_id = checklist_id;
