--- a/Checklist.html
+++ b/Checklist.html
@@ -100,6 +100,10 @@ myApp.service('userService', function() {
         checklist_id,
             function(result, event){
                 if (event.status) {
+                    console.log(result);
+                    if (result.length > 0) {
+                        console.log(result[0].Answer__c);
+                    }
                     checklistitems = result;
                     that.notifyObservers();
                 } else if (event.type === 'exception') {
