--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -33,8 +33,8 @@ id="todo"
           <input type="submit" value="Submit " ng-click="addQuestion()"> </input>
       </form>
       <div id="checklistList" >
-            <li ng-repeat="item in checklists track by $index| orderBy: 'Id'"> 
-                <p> Name: {{item.Name}} </p>
+            <li ng-repeat="item in checklists| orderBy: 'Id'| limitTo:1"> 
+                <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
                 <p> Description: {{item.Description__c}} </p>
                 <p> Id: {{item.Id}} </p>
             </li>
