--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -33,11 +33,14 @@ id="todo"
           <input type="submit" value="Submit " ng-click="addQuestion()"> </input>
       </form>
       <div id="checklistList" >
-            <li ng-repeat="item in checklists| orderBy: 'Id'| limitTo:1"> 
+           <form name="EditChecklistForm">
+            <li ng-repeat=""> 
                 <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
-                <p> Description: {{item.Description__c}} </p>
-                <p> Id: {{item.Id}} </p>
+                <p> Description: {{itemi5.Description__c}} </p>
+                <p> Id: {{itemi5.Id}} </p>
+                <input type="submit" value="Submit" ng-click="editChecklist()" ></input>
             </li>
+        </form>
         </div>
   </div>
   <div ng-model="Questions">
@@ -59,6 +62,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Desc';
     $scope.checklists = {!CheckLists};
+    $scope.item = $scope.checklists[0];
     console.log($scope.checklists);
     $scope.createChecklist = function() {
         Visualforce.remoting.Manager.invokeAction(
@@ -105,6 +109,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
         };
 
         $scope.editChecklist = function() {
+            delete $scope.item.attributes;
             Visualforce.remoting.Manager.invokeAction(
                 '{!$RemoteAction.ChecklistAdminController.updateChecklist}',
                 $scope.item,
