--- a/Checklist.html
+++ b/Checklist.html
@@ -100,9 +100,11 @@ myApp.service('userService', function() {
         checklist_id,
             function(result, event){
                 if (event.status) {
-                    console.log(result);
+                    console.log('result: ' + result);
                     if (result.length > 0) {
-                        console.log(result[0].Answer__c);
+                        console.log('this is a response id!');
+                        console.log(result[0]);
+                        console.log(result[1]);
                     }
                     checklistitems = result;
                     that.notifyObservers();
