--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -25,7 +25,8 @@ id="todo"
           <div ng-repeat="item in items">
             <h1> Question {{$index + 1}}</h1>
             <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
-            <input type="number" ng-model="item.Order__c  " name="O2" ng-required="true"></input>
+            <input type="number" ng-model="item.Order__c" name="O2" ng-required="true"></input>
+            <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
             {{item.Question__c}}
         </div>
         <input type="button" value="+" ng-click="addQuestion()"></input>
@@ -59,16 +60,17 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.numQuestions = 1;
     $scope.items = new Array();
     $scope.items[0] = new Object();
+    $scope.items[0].Required__c = true;
+    $scope.checklist = new Object();
     $scope.checklist = new Object();
     $scope.checklist.name = 'Default Name';
     $scope.checklist.description = 'Default Description';
     $scope.checklists = {!CheckLists};
-    $scope.item = $scope.checklists[0];
+    $scope.item = $scope.checklists[3];
     console.log($scope.checklists);
     $scope.createChecklist = function() {
         for(var i = 0; i < $scope.items.length; i++) {
             delete $scope.items[i].$$hashKey;
-
         }
         Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
