--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -27,6 +27,7 @@ id="todo"
             <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
             <input type="number" ng-model="item.Order__c" name="O2" ng-required="true"></input>
             <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
+            <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
             {{item.Question__c}}
         </div>
         <input type="button" value="+" ng-click="addQuestion()"></input>
@@ -67,10 +68,12 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.checklist.description = 'Default Description';
     $scope.checklists = {!CheckLists};
     $scope.item = $scope.checklists[3];
+    $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
     console.log($scope.checklists);
     $scope.createChecklist = function() {
         for(var i = 0; i < $scope.items.length; i++) {
             delete $scope.items[i].$$hashKey;
+            console.log($scope.items[i].Type__c);
         }
         Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistAdminController.createChecklistWithQuestions}',
