--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -33,7 +33,7 @@ id="todo"
         <input type="button" value="+" ng-click="addQuestion()"></input>
         <input type="button" value="-" ng-click="removeQuestion()"></input>
 
-        <input type="submit" value="Submit " ng-click="createChecklist()"> </input>
+        <input type="submit" value="Submit " ng-click="newChecklist()"> </input>
 
     </form>
     <div id="checklistList" >
@@ -70,6 +70,13 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.item = $scope.checklists[3];
     $scope.types = ['Yes/No', 'Number', 'Text', 'Date','Long Text', 'Rating', 'Picklist', 'Multi-Select'];
     console.log($scope.checklists);
+    $scope.newChecklist = function() {
+         if ($scope.newChecklistForm.$valid) {
+            $scope.createChecklist();
+         } else {
+            console.log('invalid');
+         }
+    }
     $scope.createChecklist = function() {
         for(var i = 0; i < $scope.items.length; i++) {
             delete $scope.items[i].$$hashKey;
